--- a/web/pgadmin/static/scss/resources/_default.variables.scss
+++ b/web/pgadmin/static/scss/resources/_default.variables.scss
@@ -219,7 +219,7 @@ $table-hover-border-color: $color-primary;
 $table-hover-border: $panel-border-width solid $color-primary !important;
 $table-hover-bg-color: $color-primary-light !default;
 $datagrid-bg: $color-gray-light !default;
-$datagrid-selected-color : $color-primary-fg !default;
+$datagrid-selected-color: $color-fg !default;
 
 $tree-text-fg: $color-fg !default;
 $tree-text-hover-fg: $color-fg !default;
