--- a/web/pgadmin/static/scss/resources/dark/_theme.variables.scss
+++ b/web/pgadmin/static/scss/resources/dark/_theme.variables.scss
@@ -113,3 +113,5 @@ $btn-primary-icon-disable-bg: $color-secondary;
 
 $btn-ternary-disabled-fg: $color-fg;
 $color-success-hover-fg: $color-fg;
+
+$datagrid-selected-color: $color-primary-fg;
